# reforum

./: .gitignore  Cargo.toml  README.adoc  configuration.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: mod.rs  moderators.rs  past_moderators.rs  posts.rs  prelude.rs  replies.rs  sessions.rs  topics.rs  users.rs
kratos/: kratos.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  sqlite_init.sql
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/auth/: authentication.rs  extractor.rs  mod.rs  user_role.rs
src/core/: authentication.rs  authorization.rs  filter.rs  from_row.rs  mod.rs  post.rs  session.rs  topic.rs  user.rs
src/core/sql/: user_moderation_status_by_id.sql
src/model/: from_row.rs  mod.rs  post.rs  topic.rs
src/routes/: fallback.rs  index.rs  login.rs  logout.rs  mod.rs  topics.rs
src/routes/post/: mod.rs  query_topic.sql
src/sql/: 00-create_tables.down.sql  00-create_tables.up.sql
