[package]
name = "reforum"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "reforum"


[dependencies]
color-eyre = "0.6"
thiserror = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

config = "0.13"

rand = { version = "^0.8", features = [ "min_const_gen" ] }

#axum = "^0.6.16"
maud = { version = "^0.25.0" }

#hyper = "0.14"
poem = { version = "^1.3", features = ["session"] }
tokio = { version = "1", features = ["full"] }
#tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["full"]}
#tower-cookies = { version = "0.9" }
#axum-sessions = "0.5"
async-trait = "0.1"
futures = { version = "0.3", features = ["executor"] }

rusqlite_migration = "^1.0.2"

nanoid = "0.4"
base64 = "0.21"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

secrecy = { version = "0.8", features = ["serde"] }
validator = "^0.16.0"
argon2 = { version = "^0.5.0", features = ["std"] }

itertools = "0.10"
chrono = "^0.4.24"

rusqlite = { version = "0.29", features = ["chrono", "trace", "bundled"] }
